// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error english version renders correctly 1`] = `
<div
  className="sc-AxjAm hKhHEk"
>
  <p
    className="sc-AxirZ euxtxW"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Looks like, something has gone wrong",
      }
    }
  />
</div>
`;

exports[`Error russian version renders correctly 1`] = `
<div
  className="sc-AxjAm hKhHEk"
>
  <p
    className="sc-AxirZ euxtxW"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Кажется что-то пошло не так",
      }
    }
  />
</div>
`;
